
EXTRA_DIST = command_conn.h \
             debug.h        \
             gen_conn.h     \
             in_conn.h      \
             net_error.h    \
             net_mgr.h      \
             net_table_src.h \
             net_util.h     \
             out_conn.h     \
             queue.h        \
             shared_buf.h   \
             thread.h
