
INCLUDES = -I$(top_srcdir)/dsms/include 

noinst_LTLIBRARIES = libmetadata.la

libmetadata_la_SOURCES =         \
	gen_phy_plan.cc          \
        gen_xml_plan.cc          \
	inst_aggr.cc             \
	inst_dist.cc             \
	inst_except.cc           \
	inst_expr.cc             \
	inst_join.cc             \
	inst_lin_store.cc        \
	inst_output.cc           \
	inst_project.cc          \
	inst_pwin.cc             \
	inst_pwin_store.cc       \
	inst_range_win.cc        \
	inst_rel_source.cc       \
	inst_rel_store.cc        \
	inst_row_win.cc          \
	inst_rstream.cc          \
	inst_select.cc           \
	inst_simple_store.cc     \
	inst_sink.cc             \
        inst_ss_gen.cc           \
	inst_str_join.cc         \
	inst_str_source.cc       \
	inst_union.cc            \
	inst_win_store.cc        \
	inst_xstream.cc          \
	phy_op_debug.cc          \
	plan_inst.cc             \
        plan_queue.cc            \
	plan_mgr.cc              \
	plan_mgr_impl.cc         \
        plan_mgr_monitor.cc      \
	plan_store.cc            \
	plan_syn.cc              \
	plan_trans.cc            \
	query_mgr.cc             \
	static_tuple_alloc.cc    \
	table_mgr.cc             \
	tuple_layout.cc
