
INCLUDES = -I$(top_srcdir)/dsms/include

noinst_LTLIBRARIES = libop.la

libop_la_SOURCES =  bin_join.cc bin_str_join.cc distinct.cc dstream.cc except.cc group_aggr.cc istream.cc output.cc partn_win.cc project.cc range_win.cc rel_source.cc row_win.cc rstream.cc  select.cc stream_source.cc union.cc sink.cc sys_stream_gen.cc
